[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "medtext-conv"
version = "0.1.dev2"
description = "medtext extension for data convension."
readme = "README.md"
keywords = [ "clinical note", "text-mining", "NLP", "EHR note",]
requires-python = ">=3.8"
classifiers = [ "Development Status :: 1 - Planning", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: MIT License", "Operating System :: POSIX :: Linux", "Topic :: Text Processing", "Topic :: Software Development", "Topic :: Scientific/Engineering :: Artificial Intelligence", "Topic :: Scientific/Engineering :: Information Analysis", "Programming Language :: Python :: 3",]
dynamic = [ "dependencies",]
[[project.authors]]
name = "Yifan Peng"
email = "yip4002@med.cornell.edu"

[project.urls]
Homepage = "https://github.com/bionlplab/medtext"

[project.scripts]
medtext-csv2bioc = "medtext_conv.cmd.csv2bioc:main"
medtext-cdm2bioc = "medtext_conv.cmd.cdm2bioc:main"
medtext-bioc2cdm = "medtext_conv.cmd.bioc2cdm:main"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.packages.find]
where = [ "src",]
exclude = [ "tests*",]
