[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "medtext-deid"
version = "1.0.dev3"
description = "medtext extension for PHI de-identification."
readme = "README.md"
keywords = [ "clinical note", "text-mining", "NLP", "EHR note",]
requires-python = ">=3.8"
classifiers = [ "Development Status :: 1 - Planning", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: MIT License", "Operating System :: POSIX :: Linux", "Topic :: Text Processing", "Topic :: Software Development", "Topic :: Scientific/Engineering :: Artificial Intelligence", "Topic :: Scientific/Engineering :: Information Analysis", "Programming Language :: Python :: 3",]
dynamic = [ "dependencies",]
[[project.authors]]
name = "Yifan Peng"
email = "yip4002@med.cornell.edu"

[project.urls]
Homepage = "https://github.com/bionlplab/medtext"

[project.scripts]
medtext-deid = "medtext_deid.cmd.deid:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"medtext_deid.models" = [ "predict_i2b2_medtext.json",]

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.packages.find]
namespaces = true
where = [ "src",]
exclude = [ "tests*",]
