[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "medtext-neg"
version = "1.0.dev4"
description = "medtext extension for negation/uncerntainty detection."
readme = "README.md"
keywords = [ "clinical note", "text-mining", "NLP", "EHR note",]
requires-python = ">=3.8"
classifiers = [ "Development Status :: 1 - Planning", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: MIT License", "Operating System :: POSIX :: Linux", "Topic :: Text Processing", "Topic :: Software Development", "Topic :: Scientific/Engineering :: Artificial Intelligence", "Topic :: Scientific/Engineering :: Information Analysis", "Programming Language :: Python :: 3",]
dynamic = [ "dependencies",]
[[project.authors]]
name = "Yifan Peng"
email = "yip4002@med.cornell.edu"

[project.urls]
Homepage = "https://github.com/bionlplab/medtext"

[project.scripts]
medtext-neg = "medtext_neg.cmd.neg:main"
medtext-neg-prompt = "medtext_neg.cmd.neg_prompt:main"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.packages.find]
where = [ "src",]
exclude = [ "tests*",]
