[metadata]
name = medtext-preprocess
# Versions should comply with PEP440.  For a discussion on single-sourcing
# the version across setup.py and the project code, see
# https://packaging.python.org/en/latest/single_source_version.html
version = 0.1.dev1
# Author details
author = Yifan Peng
author_email = yip4002@med.cornell.edu
description = MedText is a high-performance Python Clinic Text Analysis System.
long_description = file: README.md
long_description_content_type = text/markdown
# The project's main homepage.
url = https://github.com/bionlplab/medtext-deid
license = MIT License
keywords = clinical note, text-mining, NLP, EHR note
# See https://pypi.org/classifiers/
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Text Processing
    Topic :: Software Development
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6, <3.9
package_dir=
    =src
packages = find:
install_requires =
    bioc>=2.0
    docopt
    medtext_base
    stanza
    spacy

[options.packages.find]
where=src
exclude =
    tests.*
    tests

[options.extras_require]
rest = docutils>=0.15.2

[options.entry_points]
console_scripts =
    medtext-preprocess = medtext_preprocess.cmd.preprocess:main
