[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "medtext"
version = "1.0.dev3"
description = "MedText is a high-performance Python Clinic Text Analysis System."
readme = "README.md"
keywords = [ "clinical note", "text-mining", "NLP", "EHR note",]
requires-python = ">=3.8"
classifiers = [ "Development Status :: 1 - Planning", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: MIT License", "Operating System :: POSIX :: Linux", "Topic :: Text Processing", "Topic :: Software Development", "Topic :: Scientific/Engineering :: Artificial Intelligence", "Topic :: Scientific/Engineering :: Information Analysis", "Programming Language :: Python :: 3",]
dynamic = [ "dependencies",]
[[project.authors]]
name = "Yifan Peng"
email = "yip4002@med.cornell.edu"

[project.urls]
Homepage = "https://github.com/bionlplab/medtext"

[project.scripts]
medtext-csv2bioc = "medtext_conv.cmd.csv2bioc:main"
medtext-cdm2bioc = "medtext_conv.cmd.cdm2bioc:main"
medtext-bioc2cdm = "medtext_conv.cmd.bioc2cdm:main"
medtext-deid = "medtext_deid.cmd.deid:main"
medtext-secsplit = "medtext_secsplit.cmd.split_section:main"
medtext-preprocess = "medtext_preprocess.cmd.preprocess:main"
medtext-ssplit = "medtext_ssplit.cmd.ssplit:main"
medtext-parse = "medtext_parse.cmd.parse:main"
medtext-tree2dep = "medtext_parse.cmd.tree2dep:main"
medtext-ner = "medtext_ner.cmd.ner:main"
medtext-neg = "medtext_neg.cmd.neg:main"
medtext-neg-prompt = "medtext_neg_prompt.cmd.neg:main"
medtext-collect = "medtext_neg.cmd.collect_neg_labels:main"

[tool.setuptools]
script-files = [ "download_all.sh",]

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.packages.find]
exclude = [ "tests*",]
